# GraphForge

./: .gitignore  Dockerfile  Dockerfile.ui  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
src/api/: main.py  pyproject.toml
src/api/agents/: cypher_agent.py
src/api/agents/common/: __init__.py  config.py  llm_catalog.py  tool_result.py
src/api/agents/cypher_agent/: cypher_agent.py  variants.py
src/api/agents/domain/: user_intent.py
src/api/agents/file_suggestion_agent/: agent.py  variants.py
src/api/agents/graph_construction_agent/: agent.py  variants.py
src/api/agents/graphrag_agent/: agent.py  variants.py
src/api/agents/multi_agent/: __init__.py  agent.py  prompts.py
src/api/agents/schema_proposal_agent/: agent.py  variants.py
src/api/agents/single_agent/: agent.py  variants.py
src/api/agents/tools/: adk_tools.py  construction_plan_tools.py  cypher_tools.py  file_tools.py  graph_exploration_tools.py  kg_construction_tools.py  toolset.py  user_goal_tools.py  user_intent_tools.py
src/api/agents/user_intent_agent/: agent.py  variants.py
src/api/api_v1/: api.py
src/api/api_v1/routes/: items.py  users.py
src/api/core/: config.py  logger.py  middleware.py  session.py  telemetry.py
src/api/infra/: db.py  neo4j.py  neo4j_manager.py  pydantic_neo4j.py
src/api/models/: item.py
src/api/repositories/: item_repo.py
src/api/routers/: agents.py  chat.py  connections.py  files.py  graph.py  sessions.py
src/api/schemas/: agent.py  item.py
src/api/services/: item_service.py  runner.py
src/api/utils/: neo4j_for_adk.py
(+55 files in other folders)
